--- a/CrashReport.WebUI/Views/Admin/Index.cshtml
+++ b/CrashReport.WebUI/Views/Admin/Index.cshtml
@@ -1,52 +1,21 @@
-﻿@model IEnumerable<CrashReport.Domain.Entities.Application>
+﻿@using CrashReport.WebUI.Util;
+@model IEnumerable<CrashReport.Domain.Entities.Application>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Applications";
 }
 
-<h2>Index</h2>
-
-<table>
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Version)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.BinaryPath)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SymbolPath)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Version)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.BinaryPath)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.SymbolPath)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ApplicationId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ApplicationId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ApplicationId })
-        </td>
-    </tr>
-}
-
-</table>
+<h2>Applications</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Add Application", "AddApp")
 </p>
+
+@foreach (var app in Model)
+{
+    <a class="application-item" href="@Url.Action("ViewApp", new { id = app.ApplicationId })">
+        <img class="application-icon" src="@Utilities.GetAppIconPath(app)" />
+        <div class="application-name">@app.Name</div>
+        <div class="application-versions">@app.Versions.Count() version(s)</div>
+    </a>
+}
